--- a/tpmvc/WebContent/css/partida.css
+++ b/tpmvc/WebContent/css/partida.css
@@ -1,22 +1,27 @@
 body{
 	padding-top: 70px;
 }
+
 .navbar-collapse {
 	background-color: #236aa7;
 }
 
 .navbar-brand:first-of-type {
+	
 	font-size: 30px;
 	color: white;
+	padding:15px 0px 15px 55px;
+	background-image: url('../imagenes/Roulette.gif') ;
+	background-size:40px 30px;
+	background-position:5px center ;
+	background-repeat: no-repeat;
 }
 
 .jugador {
 	color: lightgray;
 	font-size: 20px;
+	vertical-align: middle;
 }
-
-.navbar-header>img
-{float: left; width: 40px; height: 40px; margin: 5px;}
 
 .panel-body
 {
